src/objects/Progress_Note__c.object
<CustomObject>
    <fields>
        <fullName>GoalIds_AZOPTPage__c</fullName>
        <description>Contains the goalids to be opened when the progress note is clicked</description>
        <label>GoalIds_AZOPTPage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Notes__c</fullName>
        <label>Group Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guardian_Name__c</fullName>
        <formula>&quot;Guardian #1: &quot;+ Person_Being_Served__r.Guardian1_Name__c + &quot; &quot; + IF(Person_Being_Served__r.Guardian2_Name__c != null, &quot;Guardian #2: &quot; +  Person_Being_Served__r.Guardian2_Name__c, &quot;&quot;)</formula>
        <label>Guardian Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_I__c</fullName>
        <defaultValue>false</defaultValue>
        <label>H/I</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Healthcare_Medical_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Healthcare/Medical Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Related to location</description>
        <label>Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hx_of__c</fullName>
        <label>Hx of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IIC_LIC_Staff__c</fullName>
        <label>IIC-LIC Staff</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Notes__c</fullName>
        <label>Individual Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Individual_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intensive_Family_Therapy_Units__c</fullName>
        <label>Intensive Family Therapy Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intensive_Family_Therapy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intensive Family Therapy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interventions__c</fullName>
        <inlineHelpText>Any Interventions. – Required</inlineHelpText>
        <label>Interventions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Note_Late__c</fullName>
        <description>Determines if note is late based on date of service and date note created.  Special handling for AZ.</description>
        <formula>if ( AND(Admission_State__c = &quot;AZ&quot;, DATEVALUE(CreatedDate) &gt; DATE(2013, 09,21)), if (DATEVALUE(CreatedDate) &lt;&gt; DATEVALUE(Start_Time__c),&quot;Yes&quot;,&quot;No&quot;), if ( CreatedDate - Start_Time__c &gt; 1,&quot;Yes&quot;,&quot;No&quot;))</formula>
        <label>Is Note Late?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Behavior_Worked_on_Last_Session__c</fullName>
        <label>Issue/Behavior Worked on Last Session</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_behavior_in_relation_to_Plan__c</fullName>
        <inlineHelpText>How does the issue/behavior relate to the treatment plan</inlineHelpText>
        <label>Issue/behavior in relation to Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Justification_for_Current_Phase__c</fullName>
        <label>Justification for Current Phase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>CreatedBy.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_of_Participation__c</fullName>
        <label>Level of Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Easily engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Linking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Type_AZ_Report_Map__c</fullName>
        <description>This field is used in the AZ Billing Report.</description>
        <formula>IF ((RecordType.DeveloperName == &quot;CA_FSS&quot;),
&apos;10&apos;,
 IF ((AND(Admission_State__c = &quot;MD&quot;, TEXT(Admission__r.Network_Offering__c) = &quot;ARY&quot;)), 
    CASE ( Service_Location__c, 
      &apos;Office&apos;,&apos;52&apos;, 
      &apos;15&apos;), 
    CASE ( Service_Location__c, 
      &apos;Home&apos;,&apos;12&apos;, 
      &apos;Office&apos;,&apos;11&apos;, 
      &apos;Community Mental Health Center&apos;,&apos;53&apos;, 
      &apos;99&apos;))
)</formula>
        <label>Location / Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <formula>TEXT(Service_Location__c)  + &apos; &apos; +  TEXT(Type_of_Contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location / Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>TEXT(Service_Assignment__r.Location_Region__c)</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_term_Goal_1__c</fullName>
        <label>Long-term Goal 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_term_Goal_2__c</fullName>
        <label>Long-term Goal 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_term_Goal_3__c</fullName>
        <label>Long-term Goal 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_term_Goals__c</fullName>
        <label>Long-term Goals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MHS_Activity_Type__c</fullName>
        <label>MHS Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PsyT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted Case Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Conf/Case Con</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wraparound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MID__c</fullName>
        <label>MID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Condition__c</fullName>
        <label>Medical Condition</label>
        <picklist>
            <picklistValues>
                <fullName>No Significant Changes Reported or Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medication_Informant__c</fullName>
        <inlineHelpText>Please select how you know if you answered &quot;Yes taking medication as prescribed&quot; to Taking Medication  Prescribed.</inlineHelpText>
        <label>Medication Informant</label>
        <picklist>
            <controllingField>Taking_Medication_as_Prescribed__c</controllingField>
            <picklistValues>
                <fullName>Reported by Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reported by Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessed Medication Supply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Outreach_Units__c</fullName>
        <label>Member Outreach Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Outreach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Outreach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Transportation_by_Staff_Units__c</fullName>
        <label>Member Transportation by Staff Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Transportation_by_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Transportation by Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod_1__c</fullName>
        <label>Mod 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod_2__c</fullName>
        <label>Mod 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod_3__c</fullName>
        <label>Mod 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <label>Month &amp; Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mood_Affect__c</fullName>
        <label>Mood/Affect</label>
        <picklist>
            <picklistValues>
                <fullName>No Significant Changes Reported or Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mood_Other__c</fullName>
        <label>Mood (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mood__c</fullName>
        <label>Mood</label>
        <picklist>
            <picklistValues>
                <fullName>Happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anxious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Narrative_Summary_Comments_Next_Week__c</fullName>
        <inlineHelpText>Related to next week&apos;s skill lesson planning</inlineHelpText>
        <label>Narrative Summary / Comments - Next Week</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Narrative_Summary_Comments_Previous_We__c</fullName>
        <inlineHelpText>Related to previous week&apos;s skill lesson progress and level of mastery</inlineHelpText>
        <label>Narrative Summary / Comments - Prev Week</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Narrative__c</fullName>
        <label>Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Issues_Presented__c</fullName>
        <label>New Issue(s) Presented</label>
        <picklist>
            <picklistValues>
                <fullName>None Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Issue Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Updated Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Appt_Date_Time__c</fullName>
        <inlineHelpText>Next Scheduled Appointment with this person.</inlineHelpText>
        <label>Next Appt. Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Approval_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if this progress note can be self-approved.</description>
        <inlineHelpText>Check this field if this progress note can be self-approved.</inlineHelpText>
        <label>No Approval Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Show__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Payable_Outcome__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the Progress Note was a Non-Payable Outcome which is different from Non-Billable.

If this is selected, please fill out the appropriate check boxes to the right.</inlineHelpText>
        <label>Non-Payable Outcome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_For_Next_Visit__c</fullName>
        <description>Describe goals for next meeting</description>
        <inlineHelpText>Any notes that may be helpful for the next visit. – Required</inlineHelpText>
        <label>Notes For Next Visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Required_Signatures__c</fullName>
        <label>Number of Required Signatures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Related to location</description>
        <label>Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Collateral_Contact__c</fullName>
        <description>If Other is selected in the Collateral Contact picklist, the &quot;Other Collateral Contact&quot; field must be populated.</description>
        <inlineHelpText>If Other is selected in the Collateral Contact picklist, the &quot;Other Collateral Contact&quot; field must be populated.</inlineHelpText>
        <label>Other Collateral Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Concerns__c</fullName>
        <label>Other Concerns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_DYFS_Contacted__c</fullName>
        <label>Other DYFS Contacted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Service_Code__c</fullName>
        <description>for therapy record type
Neurostative IL role</description>
        <label>Other Service Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type_of_Activity__c</fullName>
        <label>Other Type of Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_specify__c</fullName>
        <label>Other (specify)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_of_Interventions__c</fullName>
        <inlineHelpText>How did the client respond to the interventions?</inlineHelpText>
        <label>Outcome of Interventions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCP_update_since_last_visit__c</fullName>
        <inlineHelpText>Was the PCP updated/edited/rewritten since the last visit?</inlineHelpText>
        <label>PCP update since last visit?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>People_Present__c</fullName>
        <description>Enter names of other people present with the person being served during this session.</description>
        <inlineHelpText>Enter names of other people present with the person being served during this session.</inlineHelpText>
        <label>People Present</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_Being_Served__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Served</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Persons_Response_to_Interventions__c</fullName>
        <inlineHelpText>If applicable, include family/caregivers response to interventions.</inlineHelpText>
        <label>Person&apos;s Response to Interventions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phases_of_Service_Delivery__c</fullName>
        <inlineHelpText>Please indicate which phase of treatment the Clinical Team assessed the child to be in after this curriculum progress assessment.</inlineHelpText>
        <label>Phases of Service Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Police_Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Police Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Care_Provider_NPI_Number__c</fullName>
        <label>Primary Care Provider NPI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Care_Provider_Name__c</fullName>
        <label>Primary Care Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Diagnosis_Code__c</fullName>
        <label>Primary Diagnosis Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Diagnosis__c</fullName>
        <label>Primary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Code_MA__c</fullName>
        <label>Procedure Code</label>
        <picklist>
            <picklistValues>
                <fullName>H2019-HO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H2019-HN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedure_Code__c</fullName>
        <label>Procedure Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <formula>Service_Code__r.Program_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Detail__c</fullName>
        <formula>Service_Code__r.Program_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Service_Assignment__r.Program__c</formula>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress_Note_Number__c</fullName>
        <displayFormat>PN - {00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Progress Note Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <description>Progress towards goals selected.</description>
        <inlineHelpText>Progress made towards goals selected. – Required</inlineHelpText>
        <label>Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provided_to_reviewed_w_foster_parents__c</fullName>
        <inlineHelpText>If the PCP was updated/edited/rewritten since the last visit, was this provided to and reviewed with the foster parent?</inlineHelpText>
        <label>Provided to/reviewed w/ foster parents?</label>
        <picklist>
            <controllingField>PCP_update_since_last_visit__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psychoeducation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Psychoeducation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purpose_Nature_of_Service__c</fullName>
        <label>Purpose/Nature of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Care Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Crisis Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Transportation by Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collateral Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Outreach</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Purpose_Service_is_Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Default Check Box means this service is Billable, if this service is NOT Billable please Uncheck the box</inlineHelpText>
        <label>Purpose/Service is Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Contact__c</fullName>
        <label>Purpose of Contact</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purpose_of_this_Consultation__c</fullName>
        <description>A field for NC TFC notes for storing a single purpose value from a picklist.  J. Gilliam used separate field form the multi-select purpose picklist because the requirement was for on option selected from a picklist for these TFC notes.</description>
        <label>Purpose of this Consultation</label>
        <picklist>
            <picklistValues>
                <fullName>Routine Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up for Specific Need or Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RW_Signature_required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Signature required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ran_Away__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ran Away</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Person_Being_Served__c</fullName>
        <label>Related Person Being Served</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_note_IDs__c</fullName>
        <label>Related note IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Comments__c</fullName>
        <label>Risk Assessment Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Factors__c</fullName>
        <label>Risk Factors</label>
        <picklist>
            <picklistValues>
                <fullName>DENIED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hx of</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_I__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S/I</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduling_Status__c</fullName>
        <label>Scheduling Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unannounced Visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_Suspension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>School Suspension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Related to location</description>
        <label>School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Diagnosis__c</fullName>
        <label>Secondary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Code_Modifier_1__c</fullName>
        <label>Service Code Modifier 1</label>
        <picklist>
            <picklistValues>
                <fullName>GT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Code_Modifier_2__c</fullName>
        <label>Service Code Modifier 2</label>
        <picklist>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Code_Modifier_3__c</fullName>
        <label>Service Code Modifier 3</label>
        <picklist>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Code</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Frequency__c</fullName>
        <label>Service Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Bi-Weekly (IIH &amp; Day Treatment)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly (TFC)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <inlineHelpText>Location that the service took place.</inlineHelpText>
        <label>Service Location</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Mental Health Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR Intermediate Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office/TRAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Location_other__c</fullName>
        <description>A field for the &quot;other describe&quot; values from the Service_Location__c field</description>
        <inlineHelpText>Enter a description of the &quot;other&quot; value for the Service Location field.</inlineHelpText>
        <label>Service Location (other)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Region_del__c</fullName>
        <description>This Picklist will be used to aid check box selection in VisualForce Page layout.</description>
        <label>Service Region</label>
        <picklist>
            <picklistValues>
                <fullName>Central Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piedmont Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triad Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triangle Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Piedmont Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winston Salem Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Term_Goals_Placeholder__c</fullName>
        <label>Short Term Goals Placeholder</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signature_Required__c</fullName>
        <formula>IF (Number_of_Required_Signatures__c &gt; 0, &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature Required</label>
        <type>Text</type>
    </fields>
</CustomObject>